Fixed the alignment of the tables

--- a/src/main/webapp/skins/colours/psicquic-colours.css
+++ b/src/main/webapp/skins/colours/psicquic-colours.css
@@ -313,3 +313,7 @@ span.searchterm:hover {
     width: 90%;
     display: block;
 }
+
+table.servicesResultTable {
+    width: auto;
+}
